infrastructure/kubernetes/vamp-gateway.yml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: vamp-gateway-agent
spec:
  template:
    metadata:
      labels:
        io.vamp: vamp-gateway-agent
    spec:
      containers:
      - name: vamp-gateway-agent
        image: magneticio/vamp-gateway-agent:0.9.5
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 0.2
            memory: 256
        securityContext:
          privileged: true
