infrastructure/kubernetes/etcd.yml
apiVersion: v1
kind: Service
metadata:
  name: etcd-client
spec:
  ports:
  - port: 2379
    targetPort: 2379
  selector:
    io.vamp: etcd

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: etcd
spec:
  replicas: 1
  template:
    metadata:
      labels:
        io.vamp: etcd
    spec:
      containers:
      - name: etcd
        image: quay.io/coreos/etcd
        imagePullPolicy: IfNotPresent
