infrastructure/kubernetes/vamp.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vamp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        io.vamp: vamp
    spec:
      volumes:
      - name: config
        configMap:
          name: vamp-conf
      containers:
      - name: vamp
        image: magneticio/vamp:0.9.5-kubernetes
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /usr/local/vamp/conf
          name: config
---
apiVersion: v1
kind: Service
metadata:
  name: vamp
  labels:
    io.vamp: vamp
spec:
  selector:
    io.vamp: vamp
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vamp
  annotations:
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: basic-auth
spec:
  rules:
  - host: vamp.codebreaker.lesierse.com
    http:
      paths:
      - path: /
        backend:
          serviceName: vamp
          servicePort: 8080
